"3D Viewport Axis" disappears when an action is performed #73684

Closed
opened 2020-02-08 23:19:59 +01:00 by BlenderSpot · 16 comments

Performing an action, in object or edit mode, on any type of object (as far as i can tell) makes the "3D Viewport Axis" disappear.
The option menu in Preferences -> Viewport -> 3D Viewport Axis, doesn't have anything that would change its behavior. The disappearance is hindering especially when you try moving something and you don't know which direction is which and end up disoriented.

This was not the case in the 2.7x branch.

If it's not a bug but a design decision then I'd really appreciate some tips on how to make that "3D Viewport Axis" always on... through python commands or debug options, doesn't really matter.
Thank you.

Performing an action, in object or edit mode, on any type of object (as far as i can tell) makes the "3D Viewport Axis" disappear. The option menu in Preferences -> Viewport -> 3D Viewport Axis, doesn't have anything that would change its behavior. The disappearance is hindering especially when you try moving something and you don't know which direction is which and end up disoriented. This was not the case in the 2.7x branch. If it's not a bug but a design decision then I'd really appreciate some tips on how to make that "3D Viewport Axis" always on... through python commands or debug options, doesn't really matter. Thank you.
Author

Added subscriber: @unimbox

Added subscriber: @unimbox

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice

#63743 might be the solution...

#63743 might be the solution...
Member

Closed as duplicate of #63743

Closed as duplicate of #63743
Author

Added subscriber: @Blendify

Added subscriber: @Blendify
Author

@TheRedWaxPolice @Blendify, yeah, i see it's related but it's not the gizmo, but this little thing:
bldevel.png
I think it deserves a separate task to be open.

@TheRedWaxPolice @Blendify, yeah, i see it's related but it's not the gizmo, but this little thing: ![bldevel.png](https://archive.blender.org/developer/F8330256/bldevel.png) I think it deserves a separate task to be open.

Added subscriber: @ThinkingPolygons

Added subscriber: @ThinkingPolygons

@unimbox that's the same issue. once done, that will solve both things

@unimbox that's the same issue. once done, that will solve both things
Member

Correct both are considered the same thing internally

Correct both are considered the same thing internally

This issue was referenced by 917a972b56

This issue was referenced by 917a972b56af103aee406dfffe1f42745b5ad360

Changed status from 'Duplicate' to: 'Confirmed'

Changed status from 'Duplicate' to: 'Confirmed'

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Agree this isn't the same as #63743.

Agree this isn't the same as #63743.

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2021-09-14 04:54:11 +02:00

Added subscriber: @CobraA

Added subscriber: @CobraA

In #73684#1219650, @ideasman42 wrote:
Agree this isn't the same as #63743.

But why for modal operators only or is it just the first pass?
Also I want to note that it overlaps with the Auto Key text.

> In #73684#1219650, @ideasman42 wrote: > Agree this isn't the same as #63743. But why for modal operators only or is it just the first pass? Also I want to note that it overlaps with the Auto Key text.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73684
No description provided.